--- a/pinterest_login/Cargo.toml
+++ b/pinterest_login/Cargo.toml
@@ -6,15 +6,16 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chromiumoxide = { version = "0.5.0", default-features = false }
-async-std = { version = "1.12.0", optional = true }
-tokio = { version = "1.28.0", optional = true }
-thiserror = "1.0.40"
-async-trait = "0.1.68"
-log = { version = "0.4.17", optional = true }
+chromiumoxide = { version = "0.5", default-features = false }
+async-std = { version = "1", optional = true }
+tokio = { version = "1", optional = true }
+futures = "0.3.28"
+thiserror = "1"
+async-trait = "0.1"
+log = { version = "0.4", optional = true }
 
 [features]
-default = ["std-async"]
+default = ["async-std-runtime"]
 debug = ["log"]
-std-async = ["async-std", "chromiumoxide/async-std-runtime"]
-tokio-async = ["tokio", "chromiumoxide/tokio-runtime"]
+async-std-runtime = ["async-std", "chromiumoxide/async-std-runtime"]
+tokio-runtime = ["tokio", "chromiumoxide/tokio-runtime"]
