--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,32 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = "0.11.16"
-async-std = "1.12.0"
-pinterest_login = { path = "./pinterest_login" }
+reqwest = "0.11"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+
+
+[dependencies.pinterest_login]
+path = "./pinterest_login"
+default-features = false
+
+[dependencies.async-std]
+version = "1"
+optional = true
+
+[dependencies.tokio]
+version = "1"
+optional = true
+
+[dependencies.log]
+version = "0.4"
+optional = true
+
+[features]
+default = ["async-std-runtime"]
+async-std-runtime = ["async-std", "pinterest_login/async-std-runtime"]
+tokio-runtime = ["tokio", "pinterest_login/tokio-runtime"]
+debug = ["log"]
 
 [workspace]
 members = [
